:bug: Fix a bug where scrollbar wasn't hidden

--- a/src/styles/skeletons/_skeletonPlanetScrolling.scss
+++ b/src/styles/skeletons/_skeletonPlanetScrolling.scss
@@ -25,6 +25,10 @@
   padding-right: 0.02px;
 }
 
+.skeleton-planet-card-container::-webkit-scrollbar {
+  display: none;
+}
+
 .img-skeleton-planet {
   width: 100px;
   height: 100px;
